--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "polished": "^4.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.22",
     "react-icons": "^3.11.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.2",
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
